chore: freeze current work
Signed-off-by: Sam Gammon <sam@elide.ventures>